# lemmy-help

./: Cargo.toml  LICENSE  README.md  emmylua.md  flake.nix  run.sh  todo.txt
.aur/: PKGBUILD
.cargo/: config.toml
.github/workflows/: build.yaml  build.yml  pr.yaml
src/: cli.rs  common.rs  lexer.rs  lib.rs  main.rs  parser.rs  parsers.rs  vimdoc.rs
src/fixtures/: test.lua
src/frontend/: lua.rs  mod.rs
src/lexer/: token.rs  ty.rs
src/parser/: alias.rs  brief.rs  class.rs  common.rs  emmy.rs  func.rs  lexer.rs  mod.rs  node.rs  parsers.rs  return.rs  tag.rs  util.rs
src/parser/tags/: alias.rs  brief.rs  class.rs  divider.rs  func.rs  mod.rs  module.rs  see.rs  tag.rs  typ.rs  type.rs  usage.rs
src/view/: help.rs
src/vimdoc/: alias.rs  brief.rs  class.rs  divider.rs  func.rs  module.rs  see.rs  tag.rs  type.rs  usage.rs
tests/: basic.rs  renaming.rs  test.lua  types.rs  with_settings.rs
