[package]
name = "lemmy-help"
version = "0.0.0"
description = "Emmylua parser and transformer"
authors = ["numToStr <sudo@vikasraj.dev>"]
edition = "2021"
rust-version = "1.60.0"
homepage = "https://github.com/numToStr/lemmy-help"
repository = "https://github.com/numToStr/lemmy-help"
license = "MIT"
readme = "README.md"
keywords = ["parser", "lua", "emmylua"]
categories = ["parser", "command-line-utilities"]
exclude = [
    ".cargo/**",
    ".github/**",
    ".gitignore",
    "todo.txt"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "lemmy-help"
required-features = ["cli"]

[dependencies]
chumsky = { version = "0.8.0", default-features = false }

[dependencies.tabled]
version = "0.6.1"
default-features = false
# optional = true

[dependencies.clap]
version = "3.1.10"
default-features = false
features = ["std", "derive", "cargo"]
optional = true

[features]
cli = ["dep:clap"]

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = 's'
panic = 'abort'
