[package]
name = "lemmy-help"
version = "0.10.0"
description = "Emmylua parser and transformer"
authors = ["numToStr <hello@vikasraj.dev>"]
edition = "2021"
rust-version = "1.65.0"
homepage = "https://github.com/numToStr/lemmy-help"
repository = "https://github.com/numToStr/lemmy-help"
license = "MIT"
readme = "README.md"
keywords = ["parser", "lua", "emmylua", "vimdoc"]
categories = ["parsing", "command-line-utilities"]
exclude = [
    ".aur/**",
    ".cargo/**",
    ".github/**",
    "tests/**",
    ".gitignore",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "lemmy-help"
required-features = ["cli"]

[dependencies]
chumsky = { version = "0.8.0", default-features = false }
textwrap = { version = "0.16.0", default-features = false, optional = true }
comfy-table = { version = "6.1.2", default-features = false, optional = true }
lexopt = { version = "0.2.1", default-features = false, optional = true }

[features]
vimdoc = ["dep:textwrap", "dep:comfy-table"]
cli = ["vimdoc", "dep:lexopt"]

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = 3
panic = 'abort'
